// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SampleTableComponent SampleTableComponent can render with data 1`] = `
<DocumentFragment>
  <div>
    <h1
      class="bp3-heading"
    >
      Sample Table Component :: test tag
    </h1>
    <pre
      class="bp3-code-block"
    >
      url: http://test.com/
    </pre>
    <table
      class="bp3-html-table bp3-html-table-bordered bp3-html-table-striped"
    >
      <thead>
        <tr>
          <th>
            column alpha
          </th>
          <th>
            column bravo
          </th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <td>
            1
          </td>
          <td>
            2
          </td>
        </tr>
        <tr>
          <td>
            3
          </td>
          <td>
            4
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</DocumentFragment>
`;

exports[`SampleTableComponent SampleTableComponent skeleton UI 1`] = `
<DocumentFragment>
  <div>
    <h1
      class="bp3-heading"
    >
      Sample Table Component :: test tag
    </h1>
    <pre
      class="bp3-code-block"
    >
      url: http://test.com/
    </pre>
    <table
      class="bp3-html-table bp3-html-table-bordered bp3-html-table-striped"
    >
      <thead>
        <tr>
          <th>
            <p
              class="bp3-skeleton"
            >
              lorem ipsum 1234 5678
            </p>
          </th>
          <th>
            <p
              class="bp3-skeleton"
            >
              lorem ipsum 1234 5678
            </p>
          </th>
          <th>
            <p
              class="bp3-skeleton"
            >
              lorem ipsum 1234 5678
            </p>
          </th>
          <th>
            <p
              class="bp3-skeleton"
            >
              lorem ipsum 1234 5678
            </p>
          </th>
          <th>
            <p
              class="bp3-skeleton"
            >
              lorem ipsum 1234 5678
            </p>
          </th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <td>
            <p
              class="bp3-skeleton"
            >
              lorem ipsum 1234 5678
            </p>
          </td>
          <td>
            <p
              class="bp3-skeleton"
            >
              lorem ipsum 1234 5678
            </p>
          </td>
          <td>
            <p
              class="bp3-skeleton"
            >
              lorem ipsum 1234 5678
            </p>
          </td>
          <td>
            <p
              class="bp3-skeleton"
            >
              lorem ipsum 1234 5678
            </p>
          </td>
          <td>
            <p
              class="bp3-skeleton"
            >
              lorem ipsum 1234 5678
            </p>
          </td>
        </tr>
      </tbody>
    </table>
    <span />
  </div>
</DocumentFragment>
`;
